# undo

./: .gitignore  Cargo.toml  LICENSE  README.md  manager.sh
.github/workflows/: release.yml
doc/: undo.1
shell/: undo.bash  undo.fish  undo.zsh
src/: cli.rs  config.rs  engine.rs  error.rs  lib.rs  lockfile.rs  main.rs  ops.rs  output.rs  paths.rs  shellinit.rs  state.rs  trash.rs  update.rs
src/exec/: adapter.rs  chmod.rs  chown.rs  cp.rs  ln.rs  mkdir.rs  mod.rs  modes.rs  mv.rs  rename.rs  rm.rs  rmdir.rs  sed_expr.rs
src/journal/: mod.rs  model.rs  schema.rs
src/tui/: app.rs  config.rs  mod.rs  ui.rs
tests/: config_cmd.rs  engine.rs  exec_chmod.rs  exec_chown.rs  exec_cp.rs  exec_ln.rs  exec_mkdir.rs  exec_mv.rs  exec_rename.rs  exec_rm.rs  exec_rmdir.rs  fallback.rs  output_json.rs  plugins.rs  prune.rs  repair.rs  search_log.rs  shell_e2e.rs  trash_integration.rs
tests/common/: mod.rs
