[package]
name = "undo"
version = "0.1.3"
edition = "2024"
description = "Undo shell filesystem operations: journaled mv/cp/rm and friends with a freedesktop trash safety net"
license = "MIT"
repository = "https://github.com/nvrmnd-png/undo"
categories = ["command-line-utilities", "filesystem"]
keywords = ["undo", "trash", "journal", "cli", "shell"]

[lib]
name = "undo"
path = "src/lib.rs"

[[bin]]
name = "undo"
path = "src/main.rs"

[dependencies]
blake3 = "1.8"
clap = { version = "4.6", features = ["derive"] }
console = "0.16"
filetime = "0.2"
jiff = "0.2"
percent-encoding = "2.3"
ratatui = "0.30"
regex = "1.11"
rusqlite = { version = "0.39", features = ["bundled"] }
rustix = { version = "1.1", features = ["fs", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
thiserror = "2"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
strip = true
